less/theme-helpers.less
// ---------------------------------------- //
// General helper classes
// ---------------------------------------- //

.foreground {
    position: relative;
    z-index: 2;
}

.relative {
    position: relative;
}

.italic {
    font-style: italic;
}

.line-through {
    text-decoration: line-through;
}

.text-bold {
    font-weight: bold;
}

.text-muted {
    color: @text-muted !important;
}

.uppercase {
    text-transform: uppercase;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.text-justify {
    text-align: justify;
}


.underline {
    text-decoration: underline;
}

.monospace {
    font-family: @font-family-monospace;
}

a.disabled {
    .text-muted();
    pointer-events: none;
    cursor: none;
}
a.text-color {
    color: @text-color;
}

.list-indent  {
    margin-left: 15px;
}

.ease-all {
    .transition(.5s ease-in);
}

.visible-ebook {
    display: none;
}

.ebook {
    .visible-ebook {
      display: block;
    }
    .hidden-ebook {
      display: none;
    }
}

a.warning {
    color: @brand-red;
    padding: @padding-base-vertical;
    border-radius: @border-radius-base;
    text-decoration: none;
    font-size: 14px;
    vertical-align: bottom;
    font-family: @font-family-sans-serif;
    font-style: normal;
    &:hover {
        text-decoration: underline;
    }
    i {
        font-size: 22px;
        vertical-align: middle;
    }
}

.top-margin {
    margin-top: 20px;
}

.bottom-margin {
    margin-bottom: 20px;
}

.no-top-margin {
    margin-top: 0px !important;
}

.no-bottom-margin {
    margin-bottom: 0px !important;
}

.sml-margin {
    &.top {
        margin-top: 5px;
    }
    &.bottom {
        margin-bottom: 5px;
    }
    &.left {
        margin-left: 5px;
    }
    &.right {
        margin-right: 5px;
    }
}

.no-shadow {
    .box-shadow(none);
}

.break {

    overflow-wrap: break-word;
    word-wrap: break-word;

    -ms-word-break: break-all;
    word-break: break-all;
    word-break: break-word;

    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;

}

span.nowrap, a.nowrap {
    white-space: pre;
}

hr.sml-margin {
    margin-top: 10px;
    margin-bottom: 10px;
}

hr.xs-margin {
    margin-top: 5px;
    margin-bottom: 5px;
}

hr.no-margin {
    margin-top: 0px;
    margin-bottom: 0px;
}

table {
    td, th {
        &.nowrap {
            white-space: nowrap;
        }
        &.wrap {
            word-break: break-all;
        }
    }
}

p.date {
    font-family: @font-family-serif;
    font-size: @font-size-small;
    color: @gray-light;
}

.position-static {
    position: static;
}

.match-height-overflow {
    overflow: auto;
}

.btn-uppercase {
    text-transform: uppercase;
    font-size: 14px;
}

.max-height-220 {
    height: 220px;
    overflow: auto;
}

// Hide/show content in collapse links
// -----------------------------------
.collapsed-show {
    display: none;
    color: @brand-green;
}
.collapsed-hide {
    display: inline-block;
    color: @brand-red;
}
.collapsed {
    .collapsed-show {
        display: inline-block;
    }
    .collapsed-hide {
        display: none;
    }
}

.modal-content {
    &, p, .modal-title {
        text-align: left !important;
        color: initial !important;
    }
    /*
    p {
        line-height: initial !important;
    }*/
}

@media print {
    .collapsed {
        .collapsed-show, .collapsed-hide {
            display: none;
        }
    }
    .collapse.print-expand {
        display: block;
    }
}


// Centered tabs
// ----------------------------
.tabs-container-center {

    .text-center();

    .nav-tabs {

        display: inline-block;
        width: 100%;

        > li {
            display: inline-block;
            float: none;
        }

    }

}

// Vertical align helper
// ----------------------------------------
.adjacent-panels {

    display: table;

    &.panel-margin {
        margin-bottom: @line-height-computed;
    }

    > span, > a {

        display: table-cell;
        vertical-align: middle;

        >  .panel {
            margin-bottom: 0px;
        }

    }
}
.center-vertical {

    .adjacent-panels();

    > span, > a {

        vertical-align: middle;
        padding-left: 15px;

        &:first-child {
            padding-left: 0 !important;
        }

        &.nowrap {
            white-space: nowrap;
        }

    }

    &.together {
        > span, > a {
            padding-left: 7px;
        }
    }
    &.full-width {
        width: 100%;
    }
}
a.center-vertical {
    > span {
        padding-left: 5px;
    }
    > i {
        font-size: 30px;
    }
    &.center-aligned {
        margin: 0px auto;
    }
}
.top-vertical {

    .adjacent-panels();

    > span, > a {

        vertical-align: top;
        padding-left: 15px;

        &:first-child {
            padding-left: 0 !important;
        }

    }
    &.full-width {
        width: 100%;
        > span:last-child, > a:last-child {
            text-align: right;
        }
    }
}

// Merge columns
// ----------------------------------------
@media (min-width: @screen-sm-min) {

    .sm-center-vertical {
        .center-vertical();
    }

}

@media (min-width: @screen-md-min) {

    .col-md-merge-right {
        padding-right: 0px;
    }

    .col-md-merge-left {
        padding-left: 0px;
    }

    .md-adjacent-panels {
        .adjacent-panels();
    }

    .md-center-vertical {
        .center-vertical();
    }

    .col-md-pad-top {
        padding-top: 20px;
    }

    .text-md-right {
        text-align: right;
    }

}

// Max width is sm size
// -----------------------------------
.max-width-sm {
    max-width: @screen-sm;
    margin-left: auto;
    margin-right: auto;
}

// Set a min height for md or greater
// -----------------------------------
@media only screen and (min-width: @screen-md) {
    .min-height-md {
        min-height: 520px;
    }
}

// nline list
// -----------------------------------
.list-inline {
    margin-left: 0px;
    > li {
        padding-right: 5px;
        padding-left: 0px;
        &:before {
            padding-right: 5px;
        }
        &:first-child:before {
            padding-right: 0px;
        }
    }
    // Dot seperators
    // -----------------------------------
    &.inline-dots {
        > li {
            &:before {
                content: '·';
            }
            &:first-child:before {
                content: '';
            }
        }
    }
    // Bar seperators
    // -----------------------------------
    &.inline-bars {
         > li {
            &:before {
                content: '|';
            }
            &:first-child:before {
                content: '';
            }
        }
    }
}

